--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ flask = "^2.2.2"
 pymongo = {extras = ["srv"], version = "^4.3.2"}
 pyyaml = "^6.0"
 python-dotenv = "^0.21.0"
+pydantic = "^1.10.2"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
