added JWT based authentication for APIs

--- a/avionics_dash_server/config/credentials.yml
+++ b/avionics_dash_server/config/credentials.yml
@@ -2,6 +2,8 @@ default: &default
   db: &db
     username: "${db_username}"
     password: "${db_password}"
+  jwt: &jwt
+    key: "${jwt_key}"
 
 dev: &dev
   <<: *default
@@ -12,6 +14,9 @@ test: &test
     <<: *db
     username: testUser
     password: testPassword
+  jwt:
+    <<: *jwt
+    key: "test"
 
 prod: &prod
   <<: *default
