--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pymongo = {extras = ["srv"], version = "^4.3.2"}
 pyyaml = "^6.0"
 python-dotenv = "^0.21.0"
 pydantic = "^1.10.2"
+flask-httpauth = "^4.7.0"
+pyjwt = "^2.6.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
