--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python-dotenv = "^0.21.0"
 pydantic = "^1.10.2"
 flask-httpauth = "^4.7.0"
 pyjwt = "^2.6.0"
+email-validator = "^1.3.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
@@ -40,7 +41,7 @@ import_heading_firstparty = "Custom Library"
 import_heading_thirdparty = "Third-Party Library"
 import_heading_localfolder = "Local Modules"
 length_sort = true
-from_first = true
+from_first = false
 
 [tool.coverage.run]
 cover_pylib = false
