added services for assignment, module and course

--- a/avionics_dash_server/config/mongo.yml
+++ b/avionics_dash_server/config/mongo.yml
@@ -4,6 +4,7 @@ default: &default
     collections:
       users: users
       modules: modules
+      courses: courses
       assignments: assignments
     host: localhost
     port: 27017
