--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ pydantic = "^1.10.2"
 flask-httpauth = "^4.7.0"
 pyjwt = "^2.6.0"
 email-validator = "^1.3.0"
+python-dateutil = "^2.8.2"
+phonenumbers = "^8.13.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
