--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pyjwt = "^2.6.0"
 email-validator = "^1.3.0"
 python-dateutil = "^2.8.2"
 phonenumbers = "^8.13.1"
+gunicorn = "^20.1.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
