--- a/avionics_dash_server/config/mongo.yml
+++ b/avionics_dash_server/config/mongo.yml
@@ -24,3 +24,4 @@ prod: &prod
   avionics_dash:
     <<: *avionics_dash
     db_name: avionics_dash
+    connection_string: "mongodb+srv://prodUser:${password}@cluster0.olfdyj9.mongodb.net/?retryWrites=true&w=majority"
